    - added starter chest
    - added /loot command

    fixed bugs:
        - rendering of multi-part models with OR condition fails due to wrong condition check
        - rendering of some blocks failed
        - items in hotbar do not render in some cases
        - open inventory list of InventoryHandler gets reversed every ESC-press


changelog of snapshot 20w11a [released on 12.03.2020]
    - re-added support for custom block renderers
    - added support for OR-condition in block-states
    - block-states act when selecting from multiple models better
    - block models can now rotate themselves
    - tweaked generation system to look faster (and be faster)
    - world generation is now done parallel across up to 5 chunks [not thread-parallel]
    - improved block-showing performance by caching (rotated) vertices and texture data
      [this affects also world gen time]
    - added config for height of world [used in BiomePlains to calculate the height map range]
    - added an world-generation progress-view screen like in MC
    - added config for how far the world is generated when you are in-game, default is 1 chunk in each direction
    - added system for storage of worlds with serializers and data fixers [data fixers are unused at the moment]
    - added option to inventories and blocks to add custom data to save with it (items had such an function before)
    - added save-access-screen, save-loading screen
    - mod versions should be now tuple instead of any-type
    - rewritten version compare system to be based on tuples (work with lower and upper bound for versions)
    - improved entity API
    - renamed some stuff to better match
    - moved player instances to World.players
    - player interaction methods now include also the player instance itself

    fixed bugs:
        - /generate <cx> <cz>-command was not working
        - seed was ignored by generation system