@@ -137,4 +137,5 @@ issue 144: chest and ender chest were not rendering; fixed on: 14.03.2020 by uuk
 issue 146: inventory list got reversed on every ESC-press; fixed on: 14.03.2020 by uuk
     causing: issue 142: inventory slots of hotbar are sometimes not drawn; fixed on: 14.03.2020 by uuk
 issue 145: leaves were not colored; fixed on: 14.03.2020 by uuk
-issue 147: shulker boxes were not rendering
+issue 147: shulker boxes were not rendering; fixed on: 14.03.2020 by uuk
+issue 109: output of crafting gets duplicated when shift-crafting; fixed on: 14.03.2020 by uuk
